source/puppet/4.3/man/index.md
---
layout: default
built_from_commit: 3b5d15cb1c5ed830cb460f2687fde710e5383e69
title: Puppet Man Pages
canonical: /puppet/latest/reference/man/index.html
---



Puppet's command line tools consist of a single `puppet` binary with many subcommands. The following subcommands are available in this version of Puppet:

Core Tools
-----

These subcommands form the core of Puppet's tool set, and every user should understand what they do.

- [puppet agent](./agent.html)
- [puppet apply](./apply.html)
- [puppet cert](./cert.html)
- [puppet master](./master.html)
- [puppet module](./module.html)
- [puppet resource](./resource.html)
- [puppet lookup](./lookup.html)


Occasionally Useful Subcommands
-----

Many or most users will need to use these subcommands at some point, but they aren't needed for daily use the way the core tools are.

- [puppet config](./config.html)
- [puppet describe](./describe.html)
- [puppet device](./device.html)
- [puppet doc](./doc.html)
- [puppet epp](./epp.html)
- [puppet help](./help.html)
- [puppet man](./man.html)
- [puppet node](./node.html)
- [puppet parser](./parser.html)
- [puppet plugin](./plugin.html)


Niche Subcommands
-----

Most users can ignore these subcommands. They're only useful for certain niche workflows, and most of them are interfaces to Puppet's internal subsystems.

- [puppet ca](./ca.html)
- [puppet catalog](./catalog.html)
- [puppet certificate](./certificate.html)
- [puppet certificate_request](./certificate_request.html)
- [puppet certificate_revocation_list](./certificate_revocation_list.html)
- [puppet facts](./facts.html)
- [puppet file](./file.html)
- [puppet filebucket](./filebucket.html)
- [puppet inspect](./inspect.html)
- [puppet key](./key.html)
- [puppet report](./report.html)
- [puppet resource_type](./resource_type.html)
- [puppet status](./status.html)


